tests/baselines/reference/importDeclRefereingExternalModuleWithNoResolve.errors.txt
tests/cases/compiler/importDeclRefereingExternalModuleWithNoResolve.ts(1,1): error TS1148: Cannot compile modules unless the '--module' flag is provided. Consider setting the 'module' compiler option in a 'tsconfig.json' file.
tests/cases/compiler/importDeclRefereingExternalModuleWithNoResolve.ts(1,20): error TS2307: Cannot find module 'externalModule'.
tests/cases/compiler/importDeclRefereingExternalModuleWithNoResolve.ts(2,16): error TS2660: Invalid module name in augmentation, module 'm1' cannot be found.
tests/cases/compiler/importDeclRefereingExternalModuleWithNoResolve.ts(3,5): error TS2661: Module augmentation cannot introduce new names in the top level scope.
tests/cases/compiler/importDeclRefereingExternalModuleWithNoResolve.ts(3,26): error TS2307: Cannot find module 'externalModule'.


==== tests/cases/compiler/importDeclRefereingExternalModuleWithNoResolve.ts (5 errors) ====
    import b = require("externalModule");
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS1148: Cannot compile modules unless the '--module' flag is provided. Consider setting the 'module' compiler option in a 'tsconfig.json' file.
                       ~~~~~~~~~~~~~~~~
!!! error TS2307: Cannot find module 'externalModule'.
    declare module "m1" {
                   ~~~~
!!! error TS2660: Invalid module name in augmentation, module 'm1' cannot be found.
        import im2 = require("externalModule");
        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2661: Module augmentation cannot introduce new names in the top level scope.
                             ~~~~~~~~~~~~~~~~
!!! error TS2307: Cannot find module 'externalModule'.
    }
    